tests/baselines/reference/jsxNamespacePrefixInName.errors.txt
tests/cases/compiler/jsxNamespacePrefixInName.tsx(7,32): error TS1003: Identifier expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(8,32): error TS1003: Identifier expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(8,45): error TS1005: '>' expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(8,50): error TS1005: ',' expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(8,51): error TS1109: Expression expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(9,32): error TS1003: Identifier expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(9,60): error TS1005: '>' expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(9,65): error TS1005: ',' expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(9,66): error TS1109: Expression expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(10,32): error TS1003: Identifier expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(10,53): error TS1005: '>' expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(10,58): error TS1005: ',' expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(10,59): error TS1109: Expression expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(11,32): error TS1003: Identifier expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(11,68): error TS1005: '>' expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(11,73): error TS1005: ',' expected.
tests/cases/compiler/jsxNamespacePrefixInName.tsx(11,74): error TS1109: Expression expected.


==== tests/cases/compiler/jsxNamespacePrefixInName.tsx (17 errors) ====
    var justElement1 = <a:element />;
    var justElement2 = <a:element></a:element>;
    var justElement3 = <a:element attr={"value"}></a:element>;
    var justElement4 = <a:element>{"text"}</a:element>;
    var justElement5 = <a:element attr={"value"}>{"text"}</a:element>;
    
    var tooManySeparators1 = <a:ele:ment />;
                                   ~
!!! error TS1003: Identifier expected.
    var tooManySeparators2 = <a:ele:ment></a:ele:ment>;
                                   ~
!!! error TS1003: Identifier expected.
                                                ~
!!! error TS1005: '>' expected.
                                                     ~
!!! error TS1005: ',' expected.
                                                      ~
!!! error TS1109: Expression expected.
    var tooManySeparators3 = <a:ele:ment attr={"value"}></a:ele:ment>;
                                   ~
!!! error TS1003: Identifier expected.
                                                               ~
!!! error TS1005: '>' expected.
                                                                    ~
!!! error TS1005: ',' expected.
                                                                     ~
!!! error TS1109: Expression expected.
    var tooManySeparators4 = <a:ele:ment>{"text"}</a:ele:ment>;
                                   ~
!!! error TS1003: Identifier expected.
                                                        ~
!!! error TS1005: '>' expected.
                                                             ~
!!! error TS1005: ',' expected.
                                                              ~
!!! error TS1109: Expression expected.
    var tooManySeparators5 = <a:ele:ment attr={"value"}>{"text"}</a:ele:ment>;
                                   ~
!!! error TS1003: Identifier expected.
                                                                       ~
!!! error TS1005: '>' expected.
                                                                            ~
!!! error TS1005: ',' expected.
                                                                             ~
!!! error TS1109: Expression expected.
    
    var justAttribute1 = <element a:attr={"value"} />;
    var justAttribute2 = <element a:attr={"value"}></element>;
    var justAttribute3 = <element a:attr={"value"}>{"text"}</element>;
    
    var both1 = <a:element a:attr={"value"} />;
    var both2 = <a:element k:attr={"value"}></a:element>;
    var both3 = <a:element a:attr={"value"}>{"text"}</a:element>;
    